--- a/Project 1/style.css
+++ b/Project 1/style.css
@@ -6,7 +6,7 @@ body {
 
 /* Style the banner */
 header {
-    background-image: url("images/Importance-of-Web-2.0.jpg");
+    background-image: url("");
     height: 100vh;
     min-height: 600px;
     max-height: 700px;
