--- a/Project 1/style.css
+++ b/Project 1/style.css
@@ -6,7 +6,7 @@ body {
 
 /* Style the banner */
 header {
-    background-image: url("");
+    background-image: url("Images\landscape-design-1.jpg");
     height: 100vh;
     min-height: 600px;
     max-height: 700px;
