Removing sticky header

--- a/style.css
+++ b/style.css
@@ -471,8 +471,7 @@ a, abbr, acronym, address, applet, b, big, blockquote, body, center, cite, code,
 }
 /* Style the banner */
 header {
-    /* background-image: url("Images/landscape-design-1.jpg");*/
-    position: sticky;
+    background-image: url("Images/landscape-design-1.jpg");
     height: 100vh;
     min-height: 600px;
     max-height: 700px;
